[package]
name = "gode-check"
version = "1.2.2"
edition = "2024"

[dependencies]
colored = "3.1.1"
futures-util = "0.3.32"
indicatif = "0.18.4"
reqwest = { version = "0.13.2", default-features = false, features = ["json", "rustls", "stream"] }
serde_json = "1.0.149"
sha256 = "1.6.0"
tokio = { version = "1.51.1", features = ["rt-multi-thread", "macros"] }
zip = "8.5.1"
